--- a/OfertasRepo/Ofertas/Ofertas.Api/Ofertas.Api.csproj
+++ b/OfertasRepo/Ofertas/Ofertas.Api/Ofertas.Api.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+    <PackageReference Include="Flunt" Version="1.0.5" />
+    <PackageReference Include="Flunt.Br" Version="1.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
@@ -21,10 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Ofertas.Dominio\Ofertas.Dominio.csproj" />
     <ProjectReference Include="..\Ofertas.Infra.Data\Ofertas.Infra.Data.csproj" />
   </ItemGroup>
 
