--- a/OfertasRepo/Ofertas/Ofertas.Comum/Ofertas.Comum.csproj
+++ b/OfertasRepo/Ofertas/Ofertas.Comum/Ofertas.Comum.csproj
@@ -8,4 +8,10 @@
     <Folder Include="Commands\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
+    <PackageReference Include="Flunt" Version="1.0.5" />
+    <PackageReference Include="Flunt.Br" Version="1.4.1" />
+  </ItemGroup>
+
 </Project>
