--- a/OfertasRepo/Ofertas/Ofertas.Infra.Data/Ofertas.Infra.Data.csproj
+++ b/OfertasRepo/Ofertas/Ofertas.Infra.Data/Ofertas.Infra.Data.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Ofertas.Dominio\Ofertas.Dominio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositorios\" />
+  </ItemGroup>
+
 </Project>
