--- a/OfertasRepo/Ofertas/Ofertas.Api/Ofertas.Api.csproj
+++ b/OfertasRepo/Ofertas/Ofertas.Api/Ofertas.Api.csproj
@@ -20,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SendGrid" Version="9.22.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.0" />
   </ItemGroup>
 
