Moderacao de Conteudo e Novo Endpoint

--- a/OfertasRepo/Ofertas/Ofertas.Api/Ofertas.Api.csproj
+++ b/OfertasRepo/Ofertas/Ofertas.Api/Ofertas.Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Flunt.Br" Version="1.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.ContentModerator" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
       <PrivateAssets>all</PrivateAssets>
