--- a/OfertasRepo/Ofertas/Ofertas.Testes/Ofertas.Testes.csproj
+++ b/OfertasRepo/Ofertas/Ofertas.Testes/Ofertas.Testes.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="Flunt" Version="1.0.5" />
     <PackageReference Include="Flunt.Br" Version="1.4.1" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.ContentModerator" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="SendGrid" Version="9.22.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
